frontend/src/stylesheets/Root.css
nav {
    display: flex;
    justify-content: center;
}

nav ul {
    background-color: #38b38e;
    border-radius: 4px;
    display: flex;
    margin: 0;
    padding: 0;
}

nav li {
    display: inline;
}

nav a {
    font-family: 'Roboto', sans-serif;
    font-size: 20px;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    color: #ffffff;
    padding: 15px 20px;
    text-decoration: none;
}

nav a:hover {
    background-color: #ffffff;
    color: black;
}

